hotfix- changed photo

--- a/Card UI Design/index.html
+++ b/Card UI Design/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="card-container">
         <div class="image">
-            <img src="architecture-broadway-building-1089194.jpg" alt="Photo">
+            <img src="wp2693597.png" alt="Photo">
         </div>
         <div class="details">
 
